# drf_ecommerce

./: db.sqlite3  pyproject.toml
apps/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/common/: managers.py  models.py  utils.py
apps/profiles/: models.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/sellers/: models.py  urls.py  views.py
apps/sellers/migrations/: 0001_initial.py
apps/shop/: models.py  serializers.py  urls.py  views.py
apps/shop/migrations/: 0001_initial.py
core/: settings.py  urls.py
